--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ plugins {
 }
 
 def javaVersion = JavaVersion.VERSION_11
-sourceCompatibility = javaVersion
-targetCompatibility = javaVersion
+sourceCompatibility = JavaVersion.VERSION_15
+targetCompatibility = JavaVersion.VERSION_15
 version = '0.0.23'
 group = 'org.a05annex'
 
