--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation('junit:junit:4.13.2')
+    testImplementation('net.sourceforge.argparse4j:argparse4j:0.8.1')
     testImplementation('org.junit.platform:junit-platform-runner:1.9.0')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.0')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.0')
