--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ test {
 }
 
 dependencies {
-    //implementation 'org.a05annex:a05annexUtil:0.9.5'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.a05annex:a05annexUtil:0.9.6'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
     api 'org.jetbrains:annotations:23.0.0'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
 
@@ -44,7 +44,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.0')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.0')
     testImplementation('org.mockito:mockito-core:4.8.0')
-    testRuntimeOnly(files('libs/a05annexUtil-0.9.5.jar'))
+    testRuntimeOnly('org.a05annex:a05annexUtil:0.9.6')
 }
 
 
@@ -117,7 +117,7 @@ publishing {
 //            }
 //        }
 //    }
-}
+
 
 // This was the publishing to the sonatype repository. This worked in gradle 6, but needs an update for
 // gradle 7.
@@ -168,7 +168,8 @@ publishing {
 //            }
 //        }
 //    }
-//}
+
+}
 
 wpi.java.configureTestTasks(test)
 
