--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
-    id "edu.wpi.first.GradleRIO" version "2024.1.1-beta-4"
+    id "edu.wpi.first.GradleRIO" version "2024.2.1"
 }
 
 def javaVersion = JavaVersion.VERSION_17
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
-version = '0.0.32'
+version = '0.0.33'
 group = 'org.a05annex'
 
 // Set to true to use debug for JNI.
