--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "edu.wpi.first.GradleRIO" version "2024.3.1"
+    id 'edu.wpi.first.WpilibTools' version '1.3.0'
 }
 
 def javaVersion = JavaVersion.VERSION_17
@@ -10,6 +11,23 @@ sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 version = '2024.2.4'
 group = 'org.a05annex'
+
+wpilibTools.deps.wpilibVersion = wpi.versions.wpilibVersion.get()
+
+def nativeConfigName = 'wpilibNatives'
+def nativeConfig = configurations.create(nativeConfigName)
+
+def nativeTasks = wpilibTools.createExtractionTasks {
+    configurationName = nativeConfigName
+}
+
+nativeTasks.addToSourceSetResources(sourceSets.main)
+nativeConfig.dependencies.add wpilibTools.deps.wpilib("wpimath")
+nativeConfig.dependencies.add wpilibTools.deps.wpilib("wpinet")
+nativeConfig.dependencies.add wpilibTools.deps.wpilib("wpiutil")
+nativeConfig.dependencies.add wpilibTools.deps.wpilib("ntcore")
+nativeConfig.dependencies.add wpilibTools.deps.wpilib("cscore")
+nativeConfig.dependencies.add wpilibTools.deps.wpilibOpenCv("frc" + wpi.frcYear.get(), wpi.versions.opencvVersion.get())
 
 // Set to true to use debug for JNI.
 wpi.java.debugJni = false
@@ -35,6 +53,20 @@ dependencies {
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
 
+    testImplementation wpilibTools.deps.wpilibJava("wpiutil")
+    testImplementation wpilibTools.deps.wpilibJava("wpimath")
+    testImplementation wpilibTools.deps.wpilibJava("wpinet")
+    testImplementation wpilibTools.deps.wpilibJava("ntcore")
+    testImplementation wpilibTools.deps.wpilibJava("cscore")
+    testImplementation wpilibTools.deps.wpilibJava("cameraserver")
+    testImplementation wpilibTools.deps.wpilibOpenCvJava("frc" + wpi.frcYear.get(), wpi.versions.opencvVersion.get())
+
+    testImplementation group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: wpi.versions.jacksonVersion.get()
+    testImplementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: wpi.versions.jacksonVersion.get()
+    testImplementation group: "com.fasterxml.jackson.core", name: "jackson-databind", version: wpi.versions.jacksonVersion.get()
+
+    testImplementation group: "org.ejml", name: "ejml-simple", version: wpi.versions.ejmlVersion.get()
+    testImplementation group: "us.hebi.quickbuf", name: "quickbuf-runtime", version: wpi.versions.quickbufVersion.get();
     testImplementation('junit:junit:4.13.2')
     testImplementation('net.sourceforge.argparse4j:argparse4j:0.8.1')
     testImplementation('org.junit.platform:junit-platform-runner:1.9.0')
@@ -109,6 +141,10 @@ publishing {
 
 
 wpi.java.configureTestTasks(test)
+
+wrapper {
+    gradleVersion = '8.5'
+}
 
 
 
